syntax = "proto3";

package dag;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "io/metric/client/metrics.proto";

option go_package = "github.com/luxfi/vm/proto/pb/dag";

// DAGVM service for DAG-based virtual machines that use vertices with multiple parents
service DAGVM {
  // Initialize this DAG VM.
  rpc Initialize(InitializeRequest) returns (InitializeResponse);
  // SetState communicates to VM its next state it starts
  rpc SetState(SetStateRequest) returns (SetStateResponse);
  // Shutdown is called when the node is shutting down.
  rpc Shutdown(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Creates the HTTP handlers for custom network calls.
  rpc CreateHandlers(google.protobuf.Empty) returns (CreateHandlersResponse);
  // WaitForEvent blocks until receiving the next event from the VM.
  rpc WaitForEvent(google.protobuf.Empty) returns (WaitForEventResponse);
  rpc Connected(ConnectedRequest) returns (google.protobuf.Empty);
  rpc Disconnected(DisconnectedRequest) returns (google.protobuf.Empty);

  // Vertex operations (DAG-specific)
  // Attempt to create a new vertex from data contained in the VM.
  rpc BuildVertex(BuildVertexRequest) returns (BuildVertexResponse);
  // Attempt to parse a vertex from bytes.
  rpc ParseVertex(ParseVertexRequest) returns (ParseVertexResponse);
  // Attempt to load a vertex by ID.
  rpc GetVertex(GetVertexRequest) returns (GetVertexResponse);
  // Notify the VM of the currently preferred vertex.
  rpc SetPreference(SetPreferenceRequest) returns (google.protobuf.Empty);
  // Get the last accepted vertex ID.
  rpc LastAccepted(google.protobuf.Empty) returns (LastAcceptedResponse);

  // Health and version
  rpc Health(google.protobuf.Empty) returns (HealthResponse);
  rpc Version(google.protobuf.Empty) returns (VersionResponse);

  // App messaging
  rpc AppRequest(AppRequestMsg) returns (google.protobuf.Empty);
  rpc AppRequestFailed(AppRequestFailedMsg) returns (google.protobuf.Empty);
  rpc AppResponse(AppResponseMsg) returns (google.protobuf.Empty);
  rpc AppGossip(AppGossipMsg) returns (google.protobuf.Empty);

  // Metrics
  rpc Gather(google.protobuf.Empty) returns (GatherResponse);

  // Vertex lifecycle
  rpc VertexVerify(VertexVerifyRequest) returns (VertexVerifyResponse);
  rpc VertexAccept(VertexAcceptRequest) returns (google.protobuf.Empty);
  rpc VertexReject(VertexRejectRequest) returns (google.protobuf.Empty);
}

enum State {
  STATE_UNSPECIFIED = 0;
  STATE_STATE_SYNCING = 1;
  STATE_BOOTSTRAPPING = 2;
  STATE_NORMAL_OP = 3;
}

enum Error {
  ERROR_UNSPECIFIED = 0;
  ERROR_CLOSED = 1;
  ERROR_NOT_FOUND = 2;
}

message InitializeRequest {
  uint32 network_id = 1;
  bytes chain_id = 2;
  bytes node_id = 3;
  bytes public_key = 4;
  bytes x_chain_id = 5;
  bytes c_chain_id = 6;
  bytes lux_asset_id = 7;
  string chain_data_dir = 8;
  bytes genesis_bytes = 9;
  bytes upgrade_bytes = 10;
  bytes config_bytes = 11;
  string db_server_addr = 12;
  string server_addr = 13;
}

message InitializeResponse {
  bytes last_accepted_id = 1;
  repeated bytes last_accepted_parent_ids = 2; // Multiple parents for DAG
  uint64 height = 3;
  bytes bytes = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message SetStateRequest {
  State state = 1;
}

message SetStateResponse {
  bytes last_accepted_id = 1;
  repeated bytes last_accepted_parent_ids = 2;
  uint64 height = 3;
  bytes bytes = 4;
  google.protobuf.Timestamp timestamp = 5;
}

message CreateHandlersResponse {
  repeated Handler handlers = 1;
}

message Handler {
  string prefix = 1;
  string server_addr = 2;
}

message WaitForEventResponse {
  Event event = 1;
}

enum Event {
  EVENT_UNSPECIFIED = 0;
  EVENT_PENDING_TXS = 1;
  EVENT_STATE_SYNCING = 2;
}

message ConnectedRequest {
  bytes node_id = 1;
  string name = 2;
  uint32 major = 3;
  uint32 minor = 4;
  uint32 patch = 5;
}

message DisconnectedRequest {
  bytes node_id = 1;
}

// Vertex messages (DAG-specific)
message BuildVertexRequest {
  // Empty - VM builds from pending data
}

message BuildVertexResponse {
  bytes id = 1;
  repeated bytes parent_ids = 2; // Multiple parents
  uint64 height = 3;
  uint32 epoch = 4;
  bytes bytes = 5;
  repeated bytes tx_ids = 6;
  google.protobuf.Timestamp timestamp = 7;
}

message ParseVertexRequest {
  bytes bytes = 1;
}

message ParseVertexResponse {
  bytes id = 1;
  repeated bytes parent_ids = 2;
  uint64 height = 3;
  uint32 epoch = 4;
  repeated bytes tx_ids = 5;
  google.protobuf.Timestamp timestamp = 6;
  Error err = 7;
}

message GetVertexRequest {
  bytes id = 1;
}

message GetVertexResponse {
  bytes id = 1;
  repeated bytes parent_ids = 2;
  uint64 height = 3;
  uint32 epoch = 4;
  bytes bytes = 5;
  repeated bytes tx_ids = 6;
  google.protobuf.Timestamp timestamp = 7;
  Error err = 8;
}

message SetPreferenceRequest {
  bytes id = 1;
}

message LastAcceptedResponse {
  bytes id = 1;
}

message HealthResponse {
  bytes details = 1;
}

message VersionResponse {
  string version = 1;
}

message AppRequestMsg {
  bytes node_id = 1;
  uint32 request_id = 2;
  google.protobuf.Timestamp deadline = 3;
  bytes request = 4;
}

message AppRequestFailedMsg {
  bytes node_id = 1;
  uint32 request_id = 2;
  string error_message = 3;
  int32 error_code = 4;
}

message AppResponseMsg {
  bytes node_id = 1;
  uint32 request_id = 2;
  bytes response = 3;
}

message AppGossipMsg {
  bytes node_id = 1;
  bytes msg = 2;
}

message GatherResponse {
  repeated io.metric.client.MetricFamily metric_families = 1;
}

// Vertex lifecycle messages
message VertexVerifyRequest {
  bytes bytes = 1;
}

message VertexVerifyResponse {
  google.protobuf.Timestamp timestamp = 1;
}

message VertexAcceptRequest {
  bytes id = 1;
}

message VertexRejectRequest {
  bytes id = 1;
}
